# SadeWM

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  Theme.qml  build_nix.sh  config.h  config.mk  configfile.c  debug_xvfb.sh  dwm.c  flake.nix  ipc.c  ipc.h  result  sadewm.c  sadewm.desktop  sadewm.example.toml  sadewmctl  shell.qml  test_shell.qml  tomlc17.c
lightdm-qml-greeter/: CMakeLists.txt  README.md
lightdm-qml-greeter/data/: sadewm-greeter.desktop
lightdm-qml-greeter/qml/: Greeter.qml  LoginCard.qml  PillButton.qml  PowerButtons.qml  SessionPicker.qml  Theme.qml  qml.qrc  qmldir
lightdm-qml-greeter/src/: greeterbridge.cpp  greeterbridge.h  main.cpp
pyshell/: main.py  pyproject.toml  shell.nix
pyshell/components/: AudioWidget.qml  BrightnessWidget.qml  Clock.qml  DateTimeWidget.qml  LauncherWidget.qml  MediaDetails.qml  NetworkWidget.qml  NotificationButton.qml  NotificationPopups.qml  QuickMenu.qml  SettingsButton.qml  SettingsPanel.qml  Shell.qml  SystrayWidget.qml  Theme.qml  WorkspaceDots.qml
pyshell/scripts/: start-pyshell-nixos.sh
pyshell/services/: __init__.py  media_service.py  notification_service.py  power_service.py  systray_service.py  tag_service.py  window_helper.py
shell/src/: __init__.py  main.py  pyproject.toml  shell.nix
shell/src/components/: LauncherWidget.qml  Shell.qml  SystrayWidget.qml
shell/src/components/bar/: AudioWidget.qml  BrightnessWidget.qml  Clock.qml  DateTimeWidget.qml  LauncherWidget.qml  MediaDetails.qml  NetworkWidget.qml  NotificationButton.qml  NotificationPanel.qml  NotificationPopups.qml  QuickMenu.qml  Shell.qml  (+3 more)
shell/src/scripts/: start-pyshell-nixos.sh
shell/src/services/: __init__.py  app_service.py  bluetooth_service.py  notification_service.py  tag_service.py  window_helper.py
shell/src/tests/: test_emoji_service.py
(+151 files in other folders)
