[project]
name = "pyshell"
version = "0.1.0"
description = "PySide6 desktop status bar for X11 (dwm/sadewm)"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "dbus-next>=0.2.3",
    "pulsectl>=24.1.0",
]

[project.scripts]
pyshell = "pyshell.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
